# nbs_ruralscan

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAYBOOK.md  README.md  pyproject.toml
.claude/: settings.json
.github/: PROJECT_BOARD_SETUP.md  SEED_ISSUES.md  SEED_ISSUES_2026-06.md  SEED_ISSUE_M2b_project_risk.md  pull_request_template.md  setup-labels.sh
docs/: README.md  REVIEWER_GUIDE.md  dashboard.html  dashboard_data.json  erd.html  index.html  nbs_ruralscan_feedback.html  pipeline.html  pipeline_visualization.html  priority_detail.js  progress.json  project_risk.js  schema.html  sle_geo.js  sle_map.js  wireframe.html
methodology/: README.md  RULESET_VERSIONS.md  T4_generation_method.md  access_policy.md  expert_opinion_protocol.md  extraction_retrospective.md  farming_system_classifier.md  framework.md  opportunity_space_T5.md  review_2026-06-17.md  search_protocol.md  weight_normalisation.md
pipeline/: README.md  progress_ledger.csv
reference/: README.md
schema/: DEDUP_NOTES.md  README.md  T1_data_registry.csv  T1_data_registry.json  T2_climate_risk.csv  T2_climate_risk.json  T5_opportunity_space.csv  T5_opportunity_space.json  T7_geographic_context.csv  T7_geographic_context.json  spec.md
scripts/: backfill_stocktake_geo.py  git-merge-regen.sh  hydrate-corpus.py  render-crops.py  setup-repo.sh  submit-review.sh
tests/: test_access_status.py  test_acquire.py  test_apply_cp1252.py  test_apply_ragged.py  test_binding.py  test_check_scope.py  test_check_species.py  test_climate_risk.py  test_codelist.py  (+23 more)
(+184 files in other folders)
