[project]
name = "nbs-ruralscan"
version = "0.1.0"
authors = [
    { name = "Brayden Youngberg", email = "bjyberg1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.29",
    "geopandas>=1.1.3",
    "pandas>=3.0.3",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "xarray>=2026.4.0",
    "xee>=0.1.1",
    "zarr>=3.2.1",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
